This file lists major, incompatible or otherwise important changes, you should look at it after every update.

2015-03-08 API v1.1: return full URL in api/file/create_multipaste
2015-03-08 Rework file/cron and mfile->valid_id
           This pulls in mockery for testing, make sure you clone submodules.
2015-03-02 Add imagemagick support (needs convert executable in PATH)
2015-03-02 Clarify comment for upload_max_age (you should set this to 0 if you
           want to keep files forever and you should run the cronjob!)
2015-02-14 JSON API + rather extensive refactoring
2014-11-02 Multipastes can now be downloaded as tarballs. The tarballs are
           cached and you have to run `php index.php file cron` to clean them up. Calling
           it more often than once a day is recommended (the example changed to every ten
           minutes). Also note that the default maximum tarball size is rather low (50MiB),
           you might want to increase it. Also make sure the phar.so extension is loaded..
2014-10-29 The sender for emails now has to be configured (config key is "email_from")
2014-10-19 Postgresl support
2014-09-20 All PHP errors are now converted to exceptions and execution
           terminates if they are not caught. This also works properly
           with display_errors Off/stderr.
2014-08-29 Multipaste support
2014-08-29 Database migrations are no longer done automatically. You now have to run
           `php index.php tools update_database`
2013-09-25 New download driver allowing to switch between php echoing chunks
           (old behaviour and default) and X-Sendfile (635b0717931df907ee8015a42ad0ed1fcdf967c4)
2013-09-25 Switch to bootstrap 3 (9538bea0908c8a3758b41967d977455af731c344)
2013-08-15 Use CI's caching class. The default disables caching, adjust the config (cache_backend) if you want it back.
2013-08-14 Use python-ansi2html instead of HTML::FromANSI